feat: implementar el crud para los productos
